--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # (Optional) Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+twilio.account_sid=AC2ed9f51baa61f6eb2ab5bf31876cf171
+twilio.auth_token=83b93562805d08623fdf674a33b491be
+twilio.from_number=+19382044018
+
